probably fix wrapping issues of quote symbols

--- a/views/style.sass
+++ b/views/style.sass
@@ -90,16 +90,17 @@ h2, h2 a
     
 
   p.dialogue .speech, p.quote
-    &:before
-      content: "„"
+    &:before, &:after
+      white-space: nowrap
       color: #777
       font-size: 25px
+    
+    &:before
+      content: "„"
       padding-right: 3px
     
     &:after
       content: "“"
-      color: #777
-      font-size: 25px
       padding-left: 3px
       
   p.quotesource
